# fasta

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile  xenon.sublime-workspace
blender/2.81/scripts/addons/fasta/: __init__.py  renderer.py
blender/2.81/scripts/addons/fasta/ui/: __init__.py  render.py
cmake/: HoudiniConfig.cmake
docs/: Doxyfile.in
scenes/: box.hip  box_ascii.ifd  box_ascii.rib  box_binary.ifd
scenes/backup/: box_bak1.hip  box_bak10.hip  box_bak11.hip  box_bak12.hip  box_bak13.hip  box_bak2.hip  box_bak3.hip  box_bak4.hip  box_bak5.hip  box_bak6.hip  box_bak7.hip  box_bak8.hip  box_bak9.hip
src/fasta_cmd/: CMakeLists.txt  fasta.cpp  fsquad.h  ipr_window.cpp  ipr_window.h
src/fasta_lib/: CMakeLists.txt  display.cpp  display.h  gbuffer.cpp  gbuffer.h  gl_context.cpp  gl_context.h  gl_info.cpp  gl_info.h  gpu_frame_buffer.cpp  gpu_frame_buffer.h  gpu_scene_manager.h  gpu_texture.cpp  gpu_texture.h  gpu_texture_manager.cpp  gpu_texture_manager.h  light.cpp  light.h  mesh.cpp  mesh.h  object.cpp  object.h  renderer.cpp  renderer.h  renderer_ipr.cpp  renderer_ipr.h  shader.cpp  shader.h  vulkan_app.cpp  vulkan_app.h  vulkan_tools.cpp  vulkan_tools.h
src/fasta_py/: CMakeLists.txt  fasta_module.cpp  gpu_texture.cpp  gpu_texture.h  renderer.cpp  renderer.h
src/fasta_rop/: CMakeLists.txt  ROP_Xenon.cpp  ROP_Xenon.h
src/fasta_usd/: CMakeLists.txt
src/fasta_usd/hdFasta/: CMakeLists.txt  config.cpp  config.h  context.h  plugInfo.json  renderDelegate.cpp  renderDelegate.h  renderParam.h  renderer.cpp  renderer.h  rendererPlugin.cpp  rendererPlugin.h
src/fasta_utils_lib/: CMakeLists.txt  logging.cpp  logging.h  str.cpp  str.h  vfs.cpp  vfs.h
src/shaders/: deferred_shading.frag  g_buffer.frag
tests/: textures.py
